fix overflow in glow animation

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -30,7 +30,7 @@ body {
 }
 
 .hero__heading {
-  @apply mx-auto max-w-3xl text-balance text-5xl font-medium pt-10;
+  @apply mx-auto max-w-3xl text-balance text-5xl font-medium;
 }
 .hero__body {
   @apply text-center mx-auto mt-6 max-w-md text-balance text-gray-300;
@@ -53,7 +53,7 @@ body {
   @apply absolute left-1/3 top-0 -z-10 h-2/3 w-2/3 bg-sky-700/80 blur-3xl md:blur-[120px] filter mix-blend-screen;
 }
 .BlurredShadow.bottom {
-  @apply absolute left-0 top-1/3 -z-10 h-2/3 w-full bg-teal-600/60 blur-3xl md:blur-[120px] filter mix-blend-screen;
+  @apply absolute left-0 top-1/3 -z-10 h-2/3 w-1/3 bg-teal-600/60 blur-3xl md:blur-[120px] filter mix-blend-screen;
 }
 
 .glideGrid {
